add comment routes

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
+    "dev": "nodemon server",
     "knex": "knex --knexfile ./server/db/knexfile.js"
   },
   "repository": {
@@ -21,6 +22,7 @@
   "dependencies": {
     "express": "^4.17.2",
     "knex": "^0.95.15",
+    "nodemon": "^2.0.15",
     "sqlite3": "^5.0.2"
   }
 }
